compiler/tests/fixtures/invalid/semantics/query_exactly_additional_criteria.viv
// Invalid: query exactly with additional criteria

action fight:
    roles:
        @fighter:
            as: initiator

query bad-exactly-extra:
    roles:
        @witness:
            as: character
    action:
        any: fight
    bystanders:
        exactly: @witness
        any: @witness
